--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,6 @@
     const physicalItemLinks = {
         "Empire Pass": "https://greenburghlibrary.libcal.com/passes/empirepass",
         "9/11 Memorial & Museum": "https://greenburghlibrary.libcal.com/passes/911memorialmuseum",
-       <!--- "El Museo del Barrio (with NARM and Mod/Co benefits)": "https://greenburghlibrary.libcal.com/passes/elmuseo", --!>
         "Greenburgh Nature Center": "https://greenburghlibrary.libcal.com/passes/gnc",
         "Guggenheim Museum": "https://greenburghlibrary.libcal.com/passes/guggenheim",
         "Hudson River Museum": "https://greenburghlibrary.libcal.com/passes/hrm",
@@ -149,7 +148,7 @@
 
     async function fetchPhysicalStatus(accessToken) {
         const today = currentDate.toISOString().split('T')[0];
-        const itemIds = '177358,<!--155948--!>,148614,158349,148556,148555,148557,148558,148638,148563,148562,155708,157926,157700,148567,177365,148569,188153,156886';
+        const itemIds = '177358,148614,158349,148556,148555,148557,148558,148638,148563,148562,155708,157926,157700,148567,177365,148569,188153,156886';
         const url = `https://greenburghlibrary.libcal.com/1.1/equipment/item/${itemIds}`;
         const headers = {
             'Authorization': `Bearer ${accessToken}`
