Update digital item names to include 'Digital Pass'

--- a/public/index.html
+++ b/public/index.html
@@ -131,9 +131,9 @@
     };
 
     const digitalItemNames = {
-        '5ecf4efa1af9': 'Wildlife Conservation Society Discount Code',
-        '68b26db9aa61': 'FDR Presidential Library & Museum',
-        '2fd5d55560c6': 'The Pocantico Center'
+        '5ecf4efa1af9': 'Wildlife Conservation Society Discount Code - Digital Pass',
+        '68b26db9aa61': 'FDR Presidential Library & Museum - Digital Pass',
+        '2fd5d55560c6': 'The Pocantico Center - Digital Pass'
     };
 
     async function fetchAccessToken(type) {
